# SoberExampleProject

./: .gitignore  CMakeLists.txt  README.md
Executable/: CMakeLists.txt
Executable/Application/: CMakeLists.txt
Executable/TestExecutor/: CMakeLists.txt  Stub.cpp
Service/Display/: CMakeLists.txt
Service/Display/API/Display/: Stub.hpp
Service/Display/Implementation/ConsoleASCII/: CMakeLists.txt
Service/Display/Implementation/ConsoleASCII/Display/Implementation/ConsoleASCII/: Stub.cpp
Service/Display/Implementation/TestStub/: CMakeLists.txt
Service/Display/Implementation/TestStub/Display/Implementation/TestStub/: Stub.cpp
Service/Persistence/: CMakeLists.txt
Service/Persistence/API/Persistence/: Stub.hpp
Service/Persistence/Implementation/Binary/: CMakeLists.txt
Service/Persistence/Implementation/Binary/Persistence/Implementation/Binary/: Stub.cpp
Service/Persistence/Implementation/PlainText/: CMakeLists.txt
Service/Persistence/Implementation/PlainText/Persistence/Implementation/PlainText/: Stub.cpp
Service/Persistence/Implementation/TestStub/: CMakeLists.txt
Service/Persistence/Implementation/TestStub/Persistence/Implementation/TestStub/: Stub.cpp
Test/Service/: CMakeLists.txt
Test/Service/Display/: CMakeLists.txt  Stub.cpp
Test/Service/Persistence/: CMakeLists.txt  Stub.cpp
